--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "buildCommand": "yarn install && npm run build",
+  "buildCommand": "npm install && npm run build",
   "outputDirectory": "/dist"
 }
