--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "css-loader": "^6.7.4",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "jsonwebtoken": "^9.0.0",
     "micro": "^10.0.1",
     "mongoose": "^7.1.0",
-    "next": "13.4.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.4.3",
+    "postcss-loader": "^7.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-toastify": "^9.1.3",
     "stripe": "^12.5.0",
+    "style-loader": "^3.3.3",
     "styled-components": "^5.3.10"
   },
   "devDependencies": {
