--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "css-loader": "^6.7.4",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "framer-motion": "^10.12.12",
     "jsonwebtoken": "^9.0.0",
     "micro": "^10.0.1",
     "mongoose": "^7.1.0",
