--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "micro": "^10.0.1",
     "mongoose": "^7.1.0",
     "next": "^13.4.3",
+    "next-pwa": "^5.6.0",
     "postcss-loader": "^7.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
