--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "css-loader": "^6.7.4",
