--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-rating-stars-component": "^2.2.0",
     "react-toastify": "^9.1.3",
     "stripe": "^12.5.0",
     "style-loader": "^3.3.3",
