--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-pwa": "^5.6.0",
     "postcss-loader": "^7.3.0",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-rating-stars-component": "^2.2.0",
